@@ -28,6 +28,12 @@
             <setting name="Scaling" serializeAs="String">
                 <value>1</value>
             </setting>
+            <setting name="CrosshairSettingsWindowPlacement" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="NeedsUpgrade" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Virtual_Crosshair.Properties.Settings>
     </userSettings>
 </configuration>
