@@ -5,3 +5,4 @@
   into CrosshairSettingsModel
  Added monitor selection dropdown
  Persist crosshair settings
+ Persist settings window placement
